--- a/flexibble/app/globals.css
+++ b/flexibble/app/globals.css
@@ -15,11 +15,11 @@ body {
 }
 
 .flexCenter {
-  @apply flex justify-center items-center;
+  @apply flex items-center justify-center;
 }
 
 .flexBetween {
-  @apply flex justify-between items-center;
+  @apply flex items-center justify-between;
 }
 
 .flexStart {
@@ -31,7 +31,7 @@ body {
 }
 
 .paddings {
-  @apply lg:px-20 py-6 px-5;
+  @apply px-5 py-6 lg:px-20;
 }
 
 ::-webkit-scrollbar {
@@ -45,122 +45,122 @@ body {
 }
 
 .modal-head-text {
-  @apply md:text-5xl text-3xl font-extrabold text-left max-w-5xl w-full;
+  @apply w-full max-w-5xl text-left text-3xl font-extrabold md:text-5xl;
 }
 
 .no-result-text {
-  @apply w-full text-center my-10 px-2;
+  @apply my-10 w-full px-2 text-center;
 }
 
 /* Project Details */
 .user-actions_section {
-  @apply fixed max-md:hidden flex gap-4 flex-col right-10 top-20;
+  @apply fixed right-10 top-20 flex flex-col gap-4 max-md:hidden;
 }
 
 .user-info {
-  @apply flex flex-wrap whitespace-nowrap text-sm font-normal gap-2 w-full;
+  @apply flex w-full flex-wrap gap-2 whitespace-nowrap text-sm font-normal;
 }
 
 /* Home */
 .projects-grid {
-  @apply grid xl:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-10 mt-10 w-full;
+  @apply mt-10 grid w-full grid-cols-1 gap-10 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4;
 }
 
 /* Project Actions */
 .edit-action_btn {
-  @apply p-3 text-gray-100 bg-light-white-400 rounded-lg text-sm font-medium;
+  @apply rounded-lg bg-light-white-400 p-3 text-sm font-medium text-gray-100;
 }
 
 .delete-action_btn {
-  @apply p-3 text-gray-100 hover:bg-red-600 rounded-lg text-sm font-medium;
+  @apply rounded-lg p-3 text-sm font-medium text-gray-100 hover:bg-red-600;
 }
 
 /* Related Project Card */
 .related_project-card {
-  @apply flex-col rounded-2xl min-w-[210px] min-h-[197px];
+  @apply min-h-[197px] min-w-[210px] flex-col rounded-2xl;
 }
 
 .related_project-card_title {
-  @apply justify-end items-end w-full h-1/3 bg-gradient-to-b from-transparent to-black/50 rounded-b-2xl gap-2 absolute bottom-0 right-0 font-semibold text-lg text-white p-4;
+  @apply absolute bottom-0 right-0 h-1/3 w-full items-end justify-end gap-2 rounded-b-2xl bg-gradient-to-b from-transparent to-black/50 p-4 text-lg font-semibold text-white;
 }
 
 .related_projects-grid {
-  @apply grid xl:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-8 mt-5;
+  @apply mt-5 grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4;
 }
 
 /* Custom Menu */
 .custom_menu-btn {
-  @apply gap-4 w-full rounded-md bg-light-white-100 p-4 text-base outline-none capitalize;
+  @apply w-full gap-4 rounded-md bg-light-white-100 p-4 text-base capitalize outline-none;
 }
 
 .custom_menu-items {
-  @apply flex-col absolute left-0 mt-2 xs:min-w-[300px] w-fit max-h-64 origin-top-right rounded-xl bg-white border border-nav-border shadow-menu overflow-y-auto;
+  @apply absolute left-0 mt-2 max-h-64 w-fit origin-top-right flex-col overflow-y-auto rounded-xl border border-nav-border bg-white shadow-menu xs:min-w-[300px];
 }
 
 .custom_menu-item {
-  @apply text-left w-full px-5 py-2 text-sm hover:bg-light-white-100 self-start whitespace-nowrap capitalize;
+  @apply w-full self-start whitespace-nowrap px-5 py-2 text-left text-sm capitalize hover:bg-light-white-100;
 }
 
 /* Footer */
 .footer {
-  @apply flex-col paddings w-full gap-20 bg-light-white;
+  @apply paddings w-full flex-col gap-20 bg-light-white;
 }
 
 .footer_copyright {
-  @apply max-sm:flex-col w-full text-sm font-normal;
+  @apply w-full text-sm font-normal max-sm:flex-col;
 }
 
 .footer_column {
-  @apply flex-1 flex flex-col gap-3 text-sm min-w-max;
+  @apply flex min-w-max flex-1 flex-col gap-3 text-sm;
 }
 
 /* Form Field */
 .form_field-input {
-  @apply w-full outline-0 bg-light-white-100 rounded-xl p-4;
+  @apply w-full rounded-xl bg-light-white-100 p-4 outline-0;
 }
 
 /* Modal */
 .modal {
-  @apply fixed z-10 left-0 right-0 top-0 bottom-0 mx-auto bg-black/80;
+  @apply fixed bottom-0 left-0 right-0 top-0 z-10 mx-auto bg-black/80;
 }
 
 .modal_wrapper {
-  @apply flex justify-start items-center flex-col absolute h-[95%] w-full bottom-0 bg-white rounded-t-3xl lg:px-40 px-8 pt-14 pb-72 overflow-auto;
+  @apply absolute bottom-0 flex h-[95%] w-full flex-col items-center justify-start overflow-auto rounded-t-3xl bg-white px-8 pb-72 pt-14 lg:px-40;
 }
 
 /* Navbar */
 .navbar {
-  @apply py-5 px-8 border-b border-nav-border gap-4;
+  @apply gap-4 border-b border-nav-border px-8 py-5;
 }
 
 /* Profile Menu */
 .profile_menu-items {
-  @apply flex-col absolute right-1/2 translate-x-1/2 mt-3 p-7 sm:min-w-[300px] min-w-max rounded-xl bg-white border border-nav-border shadow-menu;
+  @apply absolute right-1/2 mt-3 min-w-max translate-x-1/2 flex-col rounded-xl border border-nav-border bg-white p-7 shadow-menu sm:min-w-[300px];
 }
 
 /* Profile Card */
 .profile_card-title {
-  @apply justify-end items-end w-full h-1/3 bg-gradient-to-b from-transparent to-black/50 rounded-b-2xl gap-2 absolute bottom-0 right-0 font-semibold text-lg text-white p-4;
+  @apply absolute bottom-0 right-0 h-1/3 w-full items-end justify-end gap-2 rounded-b-2xl bg-gradient-to-b from-transparent to-black/50 p-4 text-lg font-semibold text-white;
 }
 
 /* Project Form */
 .form {
-  @apply flex-col w-full lg:pt-24 pt-12 gap-10 text-lg max-w-5xl mx-auto;
+  @apply mx-auto w-full max-w-5xl flex-col gap-10 pt-12 text-lg lg:pt-24;
 }
 
 .form_image-container {
-  @apply w-full lg:min-h-[400px] min-h-[200px] relative;
+  @apply relative min-h-[200px] w-full lg:min-h-[400px];
 }
 
 .form_image-label {
-  @apply z-10 text-center w-full h-full p-20 text-gray-100 border-2 border-gray-50 border-dashed;
+  @apply z-10 h-full w-full border-2 border-dashed border-gray-50 p-20 text-center text-gray-100;
 }
 
 .form_image-input {
-  @apply absolute z-30 w-full opacity-0 h-full cursor-pointer;
+  @apply absolute z-30 h-full w-full cursor-pointer opacity-0;
 }
 
 /* Profile Projects */
 .profile_projects {
-  @apply grid xl:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-8 mt-5;
+  @apply mt-5 grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4;
 }
